@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-02
+2012-05-03 Andy Salnikov
+- DdlPds2Psana did not pass all arguments to forwarded modules
+
 Tag: V00-02-01
 2012-05-02 Andy Salnikov
 - bug fix for latest commit, _parent should have been renamed to 
